# OBP-Opey-II

./: pyproject.toml
.github/workflows/: tests.yml
src/agent/: graph_builder.py
src/agent/components/: nodes.py
src/agent/utils/: model_factory.py
src/auth/: auth.py
src/auth/rate_limiting/: limiter.py
src/service/: checkpointer.py  config.py  opey_session.py
src/service/middleware/: __init__.py  logging.py
src/service/routers/: chat.py  session.py
src/service/streaming/: events.py  orchestrator_repository.py
test/integration/: test_redis_backend_integration.py
test/service/: test_checkpointer_guard.py  test_orchestrator_repository.py  test_thread_namespacing.py
